<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/Soccer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:text="@string/soccer_match_hightlights" />


    <Button
        android:id="@+id/Lyrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Soccer"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/lyrics_song_search" />

    <Button
        android:id="@+id/Geodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Lyrics"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/geo_data" />

    <Button
        android:id="@+id/Deezer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Geodata"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/deezer_song_search" />

</LinearLayout>